# sha2

./: .gitignore  CMakeLists.txt  README.md  clang-toolchain.cmake  codex.md
cmake/: sha2Config.cmake.in
examples/: fiat_shamir_example.c  hash_example.c  sha2_app_fast_api.c  sha2_app_small_batch.c  sha2_benchmark.c  sha2_benchmark512.c  sha2_benchmark_mt.c
include/: sha2.h
src/: hash_function.c  sha2.c  sha256.c  sha256_avx2.c  sha256_avx512.c  sha256_ni_transform.S  sha256_shaext.c  sha256_shaext.h  sha2_parallel.c  sha512.c  sha512_avx2.c  sha512_avx512.c
tests/: test_sha2.c
